numbers input, and visibility

--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,15 @@
 .card {
   padding: 2em;
 }
+
+/* .NumbersKeyboard {
+  visibility: collapse;
+}
+
+.EngKeyboard {
+  visibility: visible;
+}
+
+.HebKeyboard {
+  visibility: collapse;
+} */
