--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   padding: 2em;
 }
 
-/* .NumbersKeyboard {
+.NumbersKeyboard {
   visibility: collapse;
 }
 
@@ -71,4 +71,4 @@
 
 .HebKeyboard {
   visibility: collapse;
-} */
+}
