--- a/src/App.css
+++ b/src/App.css
@@ -5,28 +5,9 @@
   text-align: center;
 }
 
-/* .keyboard-container {
-  max-width: 300px;
-  margin: 0 auto;
-}
-
-.input-box {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-.keyboard-keys {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.keyboard-keys button {
-  flex-basis: calc(20% - 10px);
-  margin: 5px;
-  padding: 10px;
-  font-size: 18px;
-  text-align: center;
+/* .input {
+  width: 350px;
+  height: 200px;
 } */
 
 .logo {
