--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   height: 200px;
 } */
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -21,7 +21,7 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
 @keyframes logo-spin {
   from {
@@ -57,3 +57,72 @@
 .NumbersKeyboard {
   visibility: visible;
 } */
+
+.App{
+  top: 200px;
+}
+
+/* .container{
+  background-color: #ffffff;
+  width: 70vmin;
+  padding: 50px 30px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 15%;
+  border-radius: 10px;
+  box-shadow: 0 25px 50px rgba(7, 20, 35, 0.2);
+} */
+
+.options {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 15px;
+}
+
+select{
+  padding:7px;
+  border: 1px solid #020929;
+  border-radius: 3px;
+}
+
+.input-wrapper{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+input[type="color"]{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  width:40px;
+  height:28px;
+  border: none;
+  cursor: pointer;
+}
+
+/* input[type="color"]::-webkit-color-swatch {
+  border-radius: 15px;
+  box-shadow: 0 0 0 2px #ffffff, 0 0 0 3px #020929;
+}
+
+input[type="color"]::-moz-color-swatch {
+  border-radius: 15px;
+  box-shadow: 0 0 0 2px #ffffff, 0 0 0 3px #020929;
+} */
+
+#text-input{
+  margin-top: 10px;
+  border: 1px solid #dddddd;
+  padding: 20px;
+  height: 20vh;
+  /* width: 400px;
+  align-content: center; */
+}
+
+.active{
+  background-color: #e0e9ff;
+}
