--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .EngKeyboard {
-  position:relative;
+  position: relative;
   visibility: collapse;
   text-align: center;
   margin: auto;
@@ -19,7 +19,6 @@
 .HebKeyboard {
   top: -120px;
   position: relative;
-  visibility: collapse;
   text-align: center;
   margin: auto;
   display: block;
@@ -27,13 +26,13 @@
 
 .NumbersKeyboard {
   position: relative;
-  visibility: collapse;
+  visibility: visible;
   text-align: center;
   margin: auto;
   display: block;
 }
 
-.SpecialChars{
+.SpecialChars {
   position: relative;
   visibility: collapse;
   text-align: center;
@@ -42,7 +41,7 @@
   top: -120px;
 }
 
-.EmojiesKeyboard{
+.EmojiesKeyboard {
   position: relative;
   visibility: collapse;
   text-align: center;
@@ -56,7 +55,7 @@
   /* border: 1.5px solid black; */
 }
 
-.App{
+.App {
   top: 200px;
 }
 
@@ -67,13 +66,13 @@
   gap: 15px;
 }
 
-select{
-  padding:7px;
+select {
+  padding: 7px;
   border: 1.5px solid black;
   border-radius: 3px;
 }
 
-#text-input{
+#text-input {
   margin-top: 10px;
   border: 1.5px solid black;
   padding: 20px;
@@ -82,23 +81,23 @@ select{
   align-content: center; */
 }
 
-.active{
+.active {
   background-color: #e0e9ff;
 }
 
-button:hover{
+button:hover {
   border: 1px solid rgb(234, 15, 52);
   transition: 1s;
 }
 
-.KeyboardOptions, .KeyboardInputs{
+.KeyboardOptions,
+.KeyboardInputs {
   position: relative;
   text-align: center;
   margin: auto;
   display: block;
 }
 
-.font-color{
+.font-color {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
